--- a/blog.html
+++ b/blog.html
@@ -81,40 +81,36 @@
 
         <section class="section py-5">
             <div class="container">
-                <div class="row gy-4 align-items-center mb-4">
-                    <div class="col-lg-5">
-                        <h1 class="text-uppercase fw-bold">Статьи</h1>
+                <div class="mb-5">
+                    <h1 class="text-uppercase fw-bold">Статьи</h1>
+                </div>
+                <div class="row gy-2 mb-4">
+                    <div class="col-md-8 col-lg-9 order-lg-2">
+                        <form action="#">
+                            <div class="input-group">
+                                <input type="text" class="form-control pe-5" placeholder="Поиск...">
+                                <i class="bx bx-search position-absolute top-50 end-0 translate-middle-y me-3 z-index-5"></i>
+                            </div>
+                        </form>
                     </div>
-                    <div class="col-lg-7">
-                        <div class="row gy-2">
-                            <div class="col-md-4 col-lg-5">
-                                <form action="#">
-                                    <select class="form-select">
-                                        <option>Все рубрики</option>
-                                        <option value="processes">Создание и продвижение</option>
-                                        <option value="startups">SEO</option>
-                                        <option value="digital">Дизайн</option>
-                                        <option value="strategy">Стратегии</option>
-                                        <option value="business">Юмор</option>
-                                    </select>
-                                </form>
-                            </div>
-                            <div class="col-md-8 col-lg-7">
-                                <form action="#">
-                                    <div class="input-group">
-                                        <input type="text" class="form-control pe-5" placeholder="Поиск...">
-                                        <i class="bx bx-search position-absolute top-50 end-0 translate-middle-y me-3 z-index-5"></i>
-                                    </div>
-                                </form>
-                            </div>
-                        </div>
+                    <div class="col-md-4 col-lg-3 order-lg-1">
+                        <form action="#">
+                            <select class="form-select">
+                                <option>Все рубрики</option>
+                                <option value="processes">Создание и продвижение</option>
+                                <option value="startups">SEO</option>
+                                <option value="digital">Дизайн</option>
+                                <option value="strategy">Стратегии</option>
+                                <option value="business">Юмор</option>
+                            </select>
+                        </form>
                     </div>
                 </div>
                 <!-- Blog grid -->
-                <div class="row gy-2 gy-md-4 row-cols-1 row-cols-sm-2 row-cols-lg-3">
+                <div class="row gy-4 row-cols-1 row-cols-md-2 row-cols-lg-3">
                     <!-- Item -->
                     <div class="col pb-3">
-                        <article class="card card-blog border-0 shadow-sm h-100">
+                        <article class="card card-blog shadow h-100">
                             <a class="hover-shine" href="blog-item.html">
                                 <img class="card-img-top" src="img/blog-card-01.webp" alt="Image">
                             </a>
@@ -127,7 +123,7 @@
                                 <div class="d-flex align-items-center justify-content-between">
                                     <span class="small text-muted">3 часа назад</span>
                                     <div class="d-flex align-items-center">
-                                        <i class="bx bx-show-alt small text-muted mt-2 me-1"></i>
+                                        <i class="bx bx-show-alt small text-muted mt-1 me-1"></i>
                                         <span class="small text-muted">256</span>
                                     </div>
                                 </div>
@@ -136,7 +132,7 @@
                     </div>
                     <!-- Item -->
                     <div class="col pb-3">
-                        <article class="card card-blog border-0 shadow-sm h-100">
+                        <article class="card card-blog shadow h-100">
                             <a class="hover-shine" href="blog-item.html">
                                 <img class="card-img-top" src="img/blog-card-02.webp" alt="Image">
                             </a>
@@ -149,7 +145,7 @@
                                 <div class="d-flex align-items-center justify-content-between">
                                     <span class="small text-muted">Вчера</span>
                                     <div class="d-flex align-items-center">
-                                        <i class="bx bx-show-alt small text-muted mt-2 me-1"></i>
+                                        <i class="bx bx-show-alt small text-muted mt-1 me-1"></i>
                                         <span class="small text-muted">518</span>
                                     </div>
                                 </div>
@@ -158,7 +154,7 @@
                     </div>
                     <!-- Item -->
                     <div class="col pb-3">
-                        <article class="card card-blog border-0 shadow-sm h-100">
+                        <article class="card card-blog shadow h-100">
                             <a class="hover-shine" href="blog-item.html">
                                 <img class="card-img-top" src="img/blog-card-03.webp" alt="Image">
                             </a>
@@ -171,7 +167,7 @@
                                 <div class="d-flex align-items-center justify-content-between">
                                     <span class="small text-muted">2 дня назад</span>
                                     <div class="d-flex align-items-center">
-                                        <i class="bx bx-show-alt small text-muted mt-2 me-1"></i>
+                                        <i class="bx bx-show-alt small text-muted mt-1 me-1"></i>
                                         <span class="small text-muted">768</span>
                                     </div>
                                 </div>
@@ -180,7 +176,7 @@
                     </div>
                     <!-- Item -->
                     <div class="col pb-3">
-                        <article class="card card-blog border-0 shadow-sm h-100">
+                        <article class="card card-blog shadow h-100">
                             <a class="hover-shine" href="blog-item.html">
                                 <img class="card-img-top" src="img/blog-card-04.webp" alt="Image">
                             </a>
@@ -193,7 +189,7 @@
                                 <div class="d-flex align-items-center justify-content-between">
                                     <span class="small text-muted">1 неделю назад</span>
                                     <div class="d-flex align-items-center">
-                                        <i class="bx bx-show-alt small text-muted mt-2 me-1"></i>
+                                        <i class="bx bx-show-alt small text-muted mt-1 me-1"></i>
                                         <span class="small text-muted">943</span>
                                     </div>
                                 </div>
@@ -202,7 +198,7 @@
                     </div>
                     <!-- Item -->
                     <div class="col pb-3">
-                        <article class="card card-blog border-0 shadow-sm h-100">
+                        <article class="card card-blog shadow h-100">
                             <a class="hover-shine" href="blog-item.html">
                                 <img class="card-img-top" src="img/blog-card-05.webp" alt="Image">
                             </a>
@@ -215,7 +211,7 @@
                                 <div class="d-flex align-items-center justify-content-between">
                                     <span class="small text-muted">2 месяца назад</span>
                                     <div class="d-flex align-items-center">
-                                        <i class="bx bx-show-alt small text-muted mt-2 me-1"></i>
+                                        <i class="bx bx-show-alt small text-muted mt-1 me-1"></i>
                                         <span class="small text-muted">1083</span>
                                     </div>
                                 </div>
@@ -224,7 +220,7 @@
                     </div>
                     <!-- Item -->
                     <div class="col pb-3">
-                        <article class="card card-blog border-0 shadow-sm h-100">
+                        <article class="card card-blog shadow h-100">
                             <a class="hover-shine" href="blog-item.html">
                                 <img class="card-img-top" src="img/blog-card-06.webp" alt="Image">
                             </a>
@@ -237,7 +233,7 @@
                                 <div class="d-flex align-items-center justify-content-between">
                                     <span class="small text-muted">2 месяца назад</span>
                                     <div class="d-flex align-items-center">
-                                        <i class="bx bx-show-alt small text-muted mt-2 me-1"></i>
+                                        <i class="bx bx-show-alt small text-muted mt-1 me-1"></i>
                                         <span class="small text-muted">2628</span>
                                     </div>
                                 </div>
@@ -246,7 +242,7 @@
                     </div>
                     <!-- Item -->
                     <div class="col pb-3">
-                        <article class="card card-blog border-0 shadow-sm h-100">
+                        <article class="card card-blog shadow h-100">
                             <a class="hover-shine" href="blog-item.html">
                                 <img class="card-img-top" src="img/blog-card-02.webp" alt="Image">
                             </a>
@@ -259,7 +255,7 @@
                                 <div class="d-flex align-items-center justify-content-between">
                                     <span class="small text-muted">6 месяцев назад</span>
                                     <div class="d-flex align-items-center">
-                                        <i class="bx bx-show-alt small text-muted mt-2 me-1"></i>
+                                        <i class="bx bx-show-alt small text-muted mt-1 me-1"></i>
                                         <span class="small text-muted">3546</span>
                                     </div>
                                 </div>
@@ -268,7 +264,7 @@
                     </div>
                     <!-- Item -->
                     <div class="col pb-3">
-                        <article class="card card-blog border-0 shadow-sm h-100">
+                        <article class="card card-blog shadow h-100">
                             <a class="hover-shine" href="blog-item.html">
                                 <img class="card-img-top" src="img/blog-card-03.webp" alt="Image">
                             </a>
@@ -281,7 +277,7 @@
                                 <div class="d-flex align-items-center justify-content-between">
                                     <span class="small text-muted">1 год назад</span>
                                     <div class="d-flex align-items-center">
-                                        <i class="bx bx-show-alt small text-muted mt-2 me-1"></i>
+                                        <i class="bx bx-show-alt small text-muted mt-1 me-1"></i>
                                         <span class="small text-muted">4912</span>
                                     </div>
                                 </div>
@@ -290,7 +286,7 @@
                     </div>
                     <!-- Item -->
                     <div class="col pb-3">
-                        <article class="card card-blog border-0 shadow-sm h-100">
+                        <article class="card card-blog shadow h-100">
                             <a class="hover-shine" href="blog-item.html">
                                 <img class="card-img-top" src="img/blog-card-01.webp" alt="Image">
                             </a>
@@ -303,7 +299,7 @@
                                 <div class="d-flex align-items-center justify-content-between">
                                     <span class="small text-muted">2 года назад</span>
                                     <div class="d-flex align-items-center">
-                                        <i class="bx bx-show-alt small text-muted mt-2 me-1"></i>
+                                        <i class="bx bx-show-alt small text-muted mt-1 me-1"></i>
                                         <span class="small text-muted">5028</span>
                                     </div>
                                 </div>
@@ -319,22 +315,22 @@
                                 <i class="bx bx-chevron-left mx-n1"></i>
                             </a>
                         </li>
-                        <li class="page-item disabled d-sm-none">
+                        <li class="page-item disabled d-md-none">
                             <span class="page-link text-body">2 / 4</span>
                         </li>
-                        <li class="page-item d-none d-sm-block">
+                        <li class="page-item d-none d-md-block">
                             <a href="#" class="page-link">1</a>
                         </li>
-                        <li class="page-item active d-none d-sm-block" aria-current="page">
+                        <li class="page-item active d-none d-md-block" aria-current="page">
                             <span class="page-link">
                                 2
                                 <span class="visually-hidden">(current)</span>
                             </span>
                         </li>
-                        <li class="page-item d-none d-sm-block">
+                        <li class="page-item d-none d-md-block">
                             <a href="#" class="page-link">3</a>
                         </li>
-                        <li class="page-item d-none d-sm-block">
+                        <li class="page-item d-none d-md-block">
                             <a href="#" class="page-link">4</a>
                         </li>
                         <li class="page-item">
@@ -483,7 +479,7 @@
     <div class="alert dark-mode alert-black fade show text-center position-fixed start-0 bottom-0 z-index-1030 w-100"
         role="alert">
         <p class="mb-0">🍪 Этот веб-сайт использует cookie. <a href="policy.html" target="_blank">Подробнее</a> <button
-                type="button" class="btn btn-secondary btn-sm align-baseline ms-2 mt-2 mt-sm-0" data-bs-dismiss="alert"
+                type="button" class="btn btn-secondary btn-sm align-baseline ms-2 mt-2 mt-md-0" data-bs-dismiss="alert"
                 aria-label="Close"><span aria-hidden="true">Ок</span></button>
         </p>
     </div>
