--- a/cases-item.html
+++ b/cases-item.html
@@ -81,21 +81,23 @@
 
         <section class="section py-5 dark-mode bg-color-black color-white">
             <div class="container">
-                <div class="row gy-4">
+                <div class="row gy-4 justify-content-between">
                     <div class="col-lg-4">
-                        <div class="sticky-top pt-lg-5">
-                            <p class="fz-15 fw-light mb-0">Клиент</p>
-                            <h1 class="h2 fw-bold mb-5">Интернет-магазин для продажи дров</h1>
+                        <div class="sticky-top">
+                            <div class="mb-5">
+                                <p class="fz-15 fw-light mb-0">Клиент</p>
+                                <h1 class="h2 fw-bold">Интернет-магазин для продажи дров</h1>
+                            </div>
                             <p class="fz-15">Что было сделано:</p>
                             <div class="fw-light">
-                                <p>- был выбран шаблон <a href="#">№3445667</a> и заполнен по желанию заказчика в соответствии с  тематикой</p>
-                                <p>- реализована заявочная система товаров. которая на этапе приёма заявки позволяет продавцу узнать какой конкретно товар хочет получить клиент и это без дополнительных действий от клиента. только номер телефона и имя</p>
-                                <p>- проведена техническая подготовка шаблона под дальнейшее SEO продвижение</p>
-                                <p>- оптимизировали работу сайта и сократили время  загрузки в половину, что в свою очередь улучшило пользовательский опыт клиентов и избежали уход клиента до загрузки страницы</p>
+                                <p>- Был выбран шаблон <a href="#">№3445667</a> и заполнен по желанию заказчика в соответствии с  тематикой</p>
+                                <p>- Реализована заявочная система товаров. которая на этапе приёма заявки позволяет продавцу узнать какой конкретно товар хочет получить клиент и это без дополнительных действий от клиента. только номер телефона и имя</p>
+                                <p>- Проведена техническая подготовка шаблона под дальнейшее SEO продвижение</p>
+                                <p>- Оптимизировали работу сайта и сократили время  загрузки в половину, что в свою очередь улучшило пользовательский опыт клиентов и избежали уход клиента до загрузки страницы</p>
                             </div>
                         </div>
                     </div>
-                    <div class="col-lg-8">
+                    <div class="col-lg-7">
                         <!-- ................................................................................... -->
                         <!-- ............................. Программисту на заметку ............................. -->
                         <!-- Должна быть возможность добавлять кастомный код из админки, а не только изображение -->
@@ -239,7 +241,7 @@
     <div class="alert dark-mode alert-black fade show text-center position-fixed start-0 bottom-0 z-index-1030 w-100"
         role="alert">
         <p class="mb-0">🍪 Этот веб-сайт использует cookie. <a href="policy.html" target="_blank">Подробнее</a> <button type="button"
-                class="btn btn-secondary btn-sm align-baseline ms-2 mt-2 mt-sm-0" data-bs-dismiss="alert" aria-label="Close"><span
+                class="btn btn-secondary btn-sm align-baseline ms-2 mt-2 mt-md-0" data-bs-dismiss="alert" aria-label="Close"><span
                     aria-hidden="true">Ок</span></button>
         </p>
     </div>
