--- a/cases.html
+++ b/cases.html
@@ -80,61 +80,63 @@
 
         <section class="section py-5 dark-mode bg-color-black color-white">
             <div class="container">
-                <h1 class="text-uppercase fw-bold mb-5">Реализованные проекты</h1>
+                <div class="mb-5">
+                    <h1 class="text-uppercase fw-bold">Реализованные проекты</h1>
+                </div>
                 <div class="row gy-4 justify-content-between">
-                    <div class="col-md-6 col-lg-5">
-                        <div class="card card-case py-3 py-lg-4">
-                            <img class="card-img" src="img/case-01.png" alt="">
+                    <div class="col-md-6 col-lg-5 pb-3 pb-lg-5">
+                        <article class="card card-case h-100">
+                            <img class="card-img-top" src="img/case-01.png" alt="">
                             <div class="card-body">
                                 <p class="card-title fz-15 fw-bold"><a class="stretched-link text-decoration-none" href="cases-item.html">Дрова-шоп</a></p>
                                 <p class="card-text">The best credit cards offer some tantalizing combinations of promotions and prizes</p>
                             </div>
-                        </div>
+                        </article>
                     </div>
-                    <div class="col-md-6 col-lg-6">
-                        <div class="card card-case py-3 py-lg-4">
-                            <img class="card-img" src="img/case-02.png" alt="">
+                    <div class="col-md-6 col-lg-6 pb-3 pb-lg-5">
+                        <article class="card card-case h-100">
+                            <img class="card-img-top" src="img/case-02.png" alt="">
                             <div class="card-body">
                                 <p class="card-title fz-15 fw-bold"><a class="stretched-link text-decoration-none" href="cases-item.html">Дрова-шоп</a></p>
                                 <p class="card-text">The best credit cards offer some tantalizing combinations of promotions and prizes</p>
                             </div>
-                        </div>
+                        </article>
                     </div>
-                    <div class="col-md-6 col-lg-6">
-                        <div class="card card-case py-3 py-lg-4">
-                            <img class="card-img" src="img/case-03.png" alt="">
+                    <div class="col-md-6 col-lg-6 pb-3 pb-lg-5">
+                        <article class="card card-case h-100">
+                            <img class="card-img-top" src="img/case-03.png" alt="">
                             <div class="card-body">
                                 <p class="card-title fz-15 fw-bold"><a class="stretched-link text-decoration-none" href="cases-item.html">Дрова-шоп</a></p>
                                 <p class="card-text">The best credit cards offer some tantalizing combinations of promotions and prizes</p>
                             </div>
-                        </div>
+                        </article>
                     </div>
-                    <div class="col-md-6 col-lg-5">
-                        <div class="card card-case py-3 py-lg-4">
-                            <img class="card-img" src="img/case-04.png" alt="">
+                    <div class="col-md-6 col-lg-5 pb-3 pb-lg-5">
+                        <article class="card card-case h-100">
+                            <img class="card-img-top" src="img/case-04.png" alt="">
                             <div class="card-body">
                                 <p class="card-title fz-15 fw-bold"><a class="stretched-link text-decoration-none" href="cases-item.html">Дрова-шоп</a></p>
                                 <p class="card-text">The best credit cards offer some tantalizing combinations of promotions and prizes</p>
                             </div>
-                        </div>
+                        </article>
                     </div>
-                    <div class="col-md-6 col-lg-5">
-                        <div class="card card-case py-3 py-lg-4">
-                            <img class="card-img" src="img/case-05.png" alt="">
+                    <div class="col-md-6 col-lg-5 pb-3 pb-lg-5">
+                        <article class="card card-case h-100">
+                            <img class="card-img-top" src="img/case-05.png" alt="">
                             <div class="card-body">
                                 <p class="card-title fz-15 fw-bold"><a class="stretched-link text-decoration-none" href="cases-item.html">Дрова-шоп</a></p>
                                 <p class="card-text">The best credit cards offer some tantalizing combinations of promotions and prizes</p>
                             </div>
-                        </div>
+                        </article>
                     </div>
-                    <div class="col-md-6 col-lg-6">
-                        <div class="card card-case py-3 py-lg-4">
-                            <img class="card-img" src="img/case-06.png" alt="">
+                    <div class="col-md-6 col-lg-6 pb-3 pb-lg-5">
+                        <article class="card card-case h-100">
+                            <img class="card-img-top" src="img/case-06.png" alt="">
                             <div class="card-body">
                                 <p class="card-title fz-15 fw-bold"><a class="stretched-link text-decoration-none" href="cases-item.html">Дрова-шоп</a></p>
                                 <p class="card-text">The best credit cards offer some tantalizing combinations of promotions and prizes</p>
                             </div>
-                        </div>
+                        </article>
                     </div>
                 </div>
             </div>
@@ -273,7 +275,7 @@
     <div class="alert dark-mode alert-black fade show text-center position-fixed start-0 bottom-0 z-index-1030 w-100"
         role="alert">
         <p class="mb-0">🍪 Этот веб-сайт использует cookie. <a href="policy.html" target="_blank">Подробнее</a> <button type="button"
-                class="btn btn-secondary btn-sm align-baseline ms-2 mt-2 mt-sm-0" data-bs-dismiss="alert" aria-label="Close"><span
+                class="btn btn-secondary btn-sm align-baseline ms-2 mt-2 mt-md-0" data-bs-dismiss="alert" aria-label="Close"><span
                     aria-hidden="true">Ок</span></button>
         </p>
     </div>
