--- a/index.html
+++ b/index.html
@@ -111,13 +111,14 @@
                     </div>
                 </div> -->
 
-                <div class="row">
-                    <div class="col-lg-10">
-                        <span class="fz-15">Разработка сайтов</span>
-                        <h1 class="text-uppercase fw-bold">Разработка сайтов в Москве</h1>
-                    </div>
-                    <div class="col-lg-2 text-center d-none d-lg-block">
-                        <a class="btn btn-icon btn-primary btn-hero btn-lg rounded-circle text-lowercase" href="#mainForm" data-bs-toggle="modal" data-bs-target="#mainForm">Написать</a>
+                <div class="row justify-content-center">
+                    <div class="col-lg-10 text-center">
+                        <div class="mb-5">
+                            <!-- <span class="fz-15">Разработка сайтов</span> -->
+                            <h1 class="text-uppercase fw-bold mb-3">Разработка сайтов в Москве</h1>
+                            <p class="fz-15">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Atque at nostrum voluptatum qui maiores placeat magni deserunt veniam laborum nesciunt sit corporis aut ut, excepturi eveniet assumenda dicta officia quo!</p>
+                        </div>
+                        <a class="btn btn-primary btn-lg" href="#mainForm" data-bs-toggle="modal" data-bs-target="#mainForm">Связаться</a>
                     </div>
                 </div>
             </div>
@@ -126,36 +127,42 @@
                     <div class="swiper-wrapper">
                         <div class="swiper-slide">
                             <!-- Parallax gfx -->
-                            <div class="parallax">
-                                <div class="parallax-layer" data-depth="0.1" style="z-index: 2;">
-                                  <img class="mx-auto" src="img/devices1.png" alt="Card">
+                            <a href="blog-item.html">
+                                <div class="parallax">
+                                    <div class="parallax-layer" data-depth="0.1" style="z-index: 2;">
+                                        <img class="mx-auto" src="img/device-tablet-01.png" alt="tablet">
+                                    </div>
+                                    <div class="parallax-layer" data-depth="0.25" style="z-index: 3;">
+                                        <img class="mx-auto" src="img/device-phone-01.png" alt="phone">
+                                    </div>
                                 </div>
-                                <div class="parallax-layer" data-depth="0.25" style="z-index: 3;">
-                                  <img class="mx-auto" src="img/devices2.png" alt="Bubble">
-                                </div>
-                            </div>
+                            </a>
                         </div>
                         <div class="swiper-slide">
                             <!-- Parallax gfx -->
-                            <div class="parallax">
-                                <div class="parallax-layer" data-depth="0.1" style="z-index: 2;">
-                                  <img src="img/devices1.png" alt="Card">
+                            <a href="blog-item.html">
+                                <div class="parallax">
+                                    <div class="parallax-layer" data-depth="0.1" style="z-index: 2;">
+                                      <img class="mx-auto" src="img/device-tablet-01.png" alt="tablet">
+                                    </div>
+                                    <div class="parallax-layer" data-depth="0.25" style="z-index: 3;">
+                                      <img class="mx-auto" src="img/device-phone-01.png" alt="phone">
+                                    </div>
                                 </div>
-                                <div class="parallax-layer" data-depth="0.25" style="z-index: 3;">
-                                  <img src="img/devices2.png" alt="Bubble">
-                                </div>
-                            </div>
+                            </a>
                         </div>
                         <div class="swiper-slide">
                             <!-- Parallax gfx -->
-                            <div class="parallax">
-                                <div class="parallax-layer" data-depth="0.1" style="z-index: 2;">
-                                  <img src="img/devices1.png" alt="Card">
+                            <a href="blog-item.html">
+                                <div class="parallax">
+                                    <div class="parallax-layer" data-depth="0.1" style="z-index: 2;">
+                                      <img class="mx-auto" src="img/devices1.png" alt="tablet">
+                                    </div>
+                                    <div class="parallax-layer" data-depth="0.25" style="z-index: 3;">
+                                      <img class="mx-auto" src="img/devices2.png" alt="phone">
+                                    </div>
                                 </div>
-                                <div class="parallax-layer" data-depth="0.25" style="z-index: 3;">
-                                  <img src="img/devices2.png" alt="Bubble">
-                                </div>
-                            </div>
+                            </a>
                         </div>
                     </div>
                     <button type="button" class="btn btn-icon btn-prev rounded-circle" id="heroSwiper-prev">
@@ -169,7 +176,7 @@
         </section>
 
         <!-- Выгодная разработка сайта в короткий срок -->
-        <section class="section py-5 pt-7 pt-lg-5 dark-mode bg-color-black color-white">
+        <section class="section py-5 dark-mode bg-color-black color-white">
             <div class="container">
                 <div class="row gy-4">
                     <div class="col-lg-6">
@@ -361,7 +368,7 @@
                             <div class="card-footer text-center py-4">
                                 <p class="fw-bold color-deep-blue">Срок от 2 дней</p>
                                 <p class="fw-light small text-muted">*В случае задержки предоставления материалов от Заказчика, срок разработки увеличивается.</p>
-                                <a class="btn btn-secondary btn-lg mt-3" href="#mainForm" data-bs-toggle="modal" data-bs-target="#mainForm">Выбрать</a>
+                                <a class="btn btn-secondary btn-lg w-100 w-lg-auto mt-3" href="#mainForm" data-bs-toggle="modal" data-bs-target="#mainForm">Выбрать</a>
                             </div>
                         </div>
                     </div>
@@ -389,7 +396,7 @@
                             <div class="card-footer text-center py-4">
                                 <p class="fw-bold color-deep-blue">Срок от 5 дней</p>
                                 <p class="fw-light small text-muted">*В случае задержки предоставления материалов от Заказчика, срок разработки увеличивается.</p>
-                                <a class="btn btn-secondary btn-lg mt-3" href="#mainForm" data-bs-toggle="modal" data-bs-target="#mainForm">Выбрать</a>
+                                <a class="btn btn-secondary btn-lg w-100 w-lg-auto mt-3" href="#mainForm" data-bs-toggle="modal" data-bs-target="#mainForm">Выбрать</a>
                             </div>
                         </div>
                     </div>
@@ -422,7 +429,7 @@
                             <div class="card-footer text-center py-4">
                                 <p class="fw-bold color-deep-blue">Срок от 10 дней</p>
                                 <p class="fw-light small text-muted">*В случае задержки предоставления материалов от Заказчика, срок разработки увеличивается.</p>
-                                <a class="btn btn-secondary btn-lg mt-3" href="#mainForm" data-bs-toggle="modal" data-bs-target="#mainForm">Выбрать</a>
+                                <a class="btn btn-secondary btn-lg w-100 w-lg-auto mt-3" href="#mainForm" data-bs-toggle="modal" data-bs-target="#mainForm">Выбрать</a>
                             </div>
                         </div>
                     </div>
@@ -476,18 +483,16 @@
             <div class="container">
                 <div class="cta p-5 px-4 px-lg-5 rounded">
                     <div class="row gy-4 align-items-center">
-                        <div class="col-lg-8">
+                        <div class="col-lg-8 text-center text-lg-start">
                             <h2 class="h1">Заказать сайт<br> в веб-студии <span class="color-blue">недорого</span></h2>
                             <div class="fw-light mt-3">
                                 <p>Everything you need to accept card payments and grow your business anywhere on the
                                     planet.</p>
                             </div>
                         </div>
-                        <div class="col-lg-4">
-                            <div class="text-lg-end">
-                                <a class="btn btn-primary btn-lg" href="#mainForm" data-bs-toggle="modal"
-                                    data-bs-target="#mainForm">Оставить заявку</a>
-                            </div>
+                        <div class="col-lg-4 text-lg-end">
+                            <a class="btn btn-primary btn-lg w-100 w-lg-auto" href="#mainForm" data-bs-toggle="modal"
+                                data-bs-target="#mainForm">Оставить заявку</a>
                         </div>
                     </div>
                 </div>
@@ -712,7 +717,7 @@
     <div class="alert dark-mode alert-black fade show text-center position-fixed start-0 bottom-0 z-index-1030 w-100"
         role="alert">
         <p class="mb-0">🍪 Этот веб-сайт использует cookie. <a href="policy.html" target="_blank">Подробнее</a> <button type="button"
-                class="btn btn-secondary btn-sm align-baseline ms-2 mt-2 mt-sm-0" data-bs-dismiss="alert" aria-label="Close"><span
+                class="btn btn-secondary btn-sm align-baseline ms-2 mt-2 mt-md-0" data-bs-dismiss="alert" aria-label="Close"><span
                     aria-hidden="true">Ок</span></button>
         </p>
     </div>
