--- a/blog-item.html
+++ b/blog-item.html
@@ -88,7 +88,7 @@
                         <div class="d-flex align-items-center justify-content-between mb-5">
                             <span class="text-muted">15 января 2023</span>
                             <div class="d-flex align-items-center">
-                                <i class="bx bx-show-alt text-muted mt-2 me-1"></i>
+                                <i class="bx bx-show-alt text-muted mt-1 me-1"></i>
                                 <span class="text-muted">768</span>
                             </div>
                         </div>
@@ -122,13 +122,13 @@
                             <!-- Quotation -->
                             <figure class="position-relative mb-4 ps-4">
                                 <span class="position-absolute top-0 start-0 w-3 h-100 bg-primary"></span>
-                                <blockquote class="blockquote fs-xl fw-medium text-dark ps-1 ps-sm-3">
+                                <blockquote class="blockquote fs-xl fw-medium text-dark ps-1 ps-md-3">
                                     <p>Sollicitudin eget massa, elementum, purus nec fermentum vitae, elementum.
                                         Tincidunt vulputate lorem cursus id. Dictum tincidunt mi ornare tristique. Id
                                         sit elit pulvinar eu. Tempus vel, mauris sed proin aliquet vulputate cras est.
                                         Ut ornare eget a viverra.</p>
                                 </blockquote>
-                                <figcaption class="d-flex align-items-center pt-3 ps-1 ps-sm-3">
+                                <figcaption class="d-flex align-items-center pt-3 ps-1 ps-md-3">
                                     <img src="img/avatar-04.jpg" width="48" class="rounded-circle"
                                         alt="Jane Cooper">
                                     <div class="ps-3">
@@ -194,8 +194,8 @@
 
                             <!-- Tags -->
                             <hr class="mb-4">
-                            <div class="d-flex flex-sm-row flex-column pt-2">
-                                <h6 class="mt-sm-1 mb-sm-2 mb-3 me-2 text-nowrap">Related Tags:</h6>
+                            <div class="d-flex flex-md-row flex-column pt-2">
+                                <h6 class="mt-md-1 mb-md-2 mb-3 me-2 text-nowrap">Related Tags:</h6>
                                 <div>
                                     <a href="#" class="btn btn-sm btn-outline-secondary me-2 mb-2">#lifestyle</a>
                                     <a href="#" class="btn btn-sm btn-outline-secondary me-2 mb-2">#tech</a>
@@ -212,7 +212,7 @@
         <!-- Post comments -->
         <section class="section py-3">
             <div class="container">
-                <h2 class="h1 text-center text-sm-start">4 комментария</h2>
+                <h2 class="h1">4 комментария</h2>
                 <div class="row">
                     <div class="col-lg-9">
 
@@ -221,7 +221,7 @@
                             <!-- Comment -->
                             <li class="comment d-block py-4">
                                 <article>
-                                    <div class="d-block d-sm-flex align-items-center justify-content-between mb-2">
+                                    <div class="d-block d-md-flex align-items-center justify-content-between mb-2">
                                         <div class="d-flex align-items-center">
                                             <img src="img/avatar-03.jpg" class="rounded-circle" width="45" alt="Avatar">
                                             <div class="ms-3">
@@ -254,7 +254,7 @@
                             <!-- Comment -->
                             <li class="comment d-block py-4">
                                 <article>
-                                    <div class="d-block d-sm-flex align-items-center justify-content-between mb-2">
+                                    <div class="d-block d-md-flex align-items-center justify-content-between mb-2">
                                         <div class="d-flex align-items-center">
                                             <img src="img/avatar-02.jpg" class="rounded-circle" width="45" alt="Avatar">
                                             <div class="ms-3">
@@ -288,7 +288,7 @@
                             <ul class="children">
                                 <li class="comment d-block py-4">
                                     <article>
-                                        <div class="d-block d-sm-flex align-items-center justify-content-between mb-2">
+                                        <div class="d-block d-md-flex align-items-center justify-content-between mb-2">
                                             <div class="d-flex align-items-center">
                                                 <img src="img/avatar-05.jpg" class="rounded-circle" width="45" alt="Avatar">
                                                 <div class="ms-3">
@@ -319,7 +319,7 @@
                             <!-- Comment -->
                             <li class="comment d-block py-4">
                                 <article>
-                                    <div class="d-block d-sm-flex align-items-center justify-content-between mb-2">
+                                    <div class="d-block d-md-flex align-items-center justify-content-between mb-2">
                                         <div class="d-flex align-items-center">
                                             <img src="img/avatar-07.jpg" class="rounded-circle" width="45" alt="Avatar">
                                             <div class="ms-3">
@@ -363,25 +363,25 @@
                 <div class="row">
                     <div class="col-lg-9">
                         <div id="respond" class="bg-light p-3 p-md-5">
-                            <div class="d-block d-sm-flex align-items-center justify-content-between">
+                            <div class="d-block d-md-flex align-items-center justify-content-between">
                                 <p id="reply-title" class="h2 mb-4">Оставить комментарий</p>
                                 <p><a rel="nofollow" id="cancel-comment-reply-link" href="#respond" style="display: none;">Отменить ответ</a></p>
                             </div>
                             <form id="comment-form" method="post" action="#" class="comment-form needs-validation" novalidate>
                                 <div class="row gy-4">
-                                    <div class="col-12 col-sm-6">
+                                    <div class="col-12 col-md-6">
                                         <label for="c-name" class="form-label d-none">Имя</label>
                                         <input name="author" id="c-name" type="text" class="form-control" placeholder="Ваше имя" style="height: 55px;" required>
                                         <span class="invalid-tooltip">Пожалуйста введите имя.</span>
                                     </div>
-                                    <div class="col-12 col-sm-6">
+                                    <div class="col-12 col-md-6">
                                         <label for="c-email" class="form-label d-none">Email</label>
                                         <input name="email" id="c-email" type="email" class="form-control" placeholder="Ваш Email" style="height: 55px;" required>
                                         <span class="invalid-tooltip">Пожалуйста укажите действующий адрес электронной почты.</span>
                                     </div>
-                                    <div class="col-12">
-                                        <label for="c-website" class="form-label d-none">Вебсайт</label>
-                                        <input name="url" id="c-website" type="text" class="form-control d-none" placeholder="Вебсайт" style="height: 55px;">
+                                    <div class="col-12 d-none">
+                                        <label for="c-website" class="form-label">Вебсайт</label>
+                                        <input name="url" id="c-website" type="text" class="form-control" placeholder="Вебсайт" style="height: 55px;">
                                     </div>
                                     <div class="col-12">
                                         <label for="c-comment" class="form-label d-none">Комментарий</label>
@@ -395,7 +395,7 @@
                                         </div>
                                     </div>
                                     <div class="col-12">
-                                        <button type="submit" class="btn btn-primary btn-lg w-100 w-sm-auto mt-2">Отправить комментарий</button>
+                                        <button type="submit" class="btn btn-primary btn-lg w-100 w-lg-auto mt-2">Отправить комментарий</button>
                                     </div>
                                 </div>
                             </form>
@@ -413,8 +413,8 @@
                         <p class="h1 mb-4">Также интересно</p>
                         <div class="swiper relatedPosts">
                             <div class="swiper-wrapper py-3">
-                                <div class="swiper-slide h-auto p-2">
-                                    <article class="card card-blog border-0 shadow-sm h-100">
+                                <div class="swiper-slide h-auto p-3">
+                                    <article class="card card-blog shadow h-100">
                                         <a class="hover-shine" href="blog-item.html">
                                             <img class="card-img-top" src="img/blog-card-01.webp" alt="Image">
                                         </a>
@@ -428,15 +428,15 @@
                                             <div class="d-flex align-items-center justify-content-between">
                                                 <span class="small text-muted">3 часа назад</span>
                                                 <div class="d-flex align-items-center">
-                                                    <i class="bx bx-show-alt small text-muted mt-2 me-1"></i>
+                                                    <i class="bx bx-show-alt small text-muted mt-1 me-1"></i>
                                                     <span class="small text-muted">256</span>
                                                 </div>
                                             </div>
                                         </div>
                                     </article>
                                 </div>
-                                <div class="swiper-slide h-auto p-2">
-                                    <article class="card card-blog border-0 shadow-sm h-100">
+                                <div class="swiper-slide h-auto p-3">
+                                    <article class="card card-blog shadow h-100">
                                         <a class="hover-shine" href="blog-item.html">
                                             <img class="card-img-top" src="img/blog-card-02.webp" alt="Image">
                                         </a>
@@ -450,15 +450,15 @@
                                             <div class="d-flex align-items-center justify-content-between">
                                                 <span class="small text-muted">Вчера</span>
                                                 <div class="d-flex align-items-center">
-                                                    <i class="bx bx-show-alt small text-muted mt-2 me-1"></i>
+                                                    <i class="bx bx-show-alt small text-muted mt-1 me-1"></i>
                                                     <span class="small text-muted">518</span>
                                                 </div>
                                             </div>
                                         </div>
                                     </article>
                                 </div>
-                                <div class="swiper-slide h-auto p-2">
-                                    <article class="card card-blog border-0 shadow-sm h-100">
+                                <div class="swiper-slide h-auto p-3">
+                                    <article class="card card-blog shadow h-100">
                                         <a class="hover-shine" href="blog-item.html">
                                             <img class="card-img-top" src="img/blog-card-03.webp" alt="Image">
                                         </a>
@@ -472,15 +472,15 @@
                                             <div class="d-flex align-items-center justify-content-between">
                                                 <span class="small text-muted">2 дня назад</span>
                                                 <div class="d-flex align-items-center">
-                                                    <i class="bx bx-show-alt small text-muted mt-2 me-1"></i>
+                                                    <i class="bx bx-show-alt small text-muted mt-1 me-1"></i>
                                                     <span class="small text-muted">768</span>
                                                 </div>
                                             </div>
                                         </div>
                                     </article>
                                 </div>
-                                <div class="swiper-slide h-auto p-2">
-                                    <article class="card card-blog border-0 shadow-sm h-100">
+                                <div class="swiper-slide h-auto p-3">
+                                    <article class="card card-blog shadow h-100">
                                         <a class="hover-shine" href="blog-item.html">
                                             <img class="card-img-top" src="img/blog-card-04.webp" alt="Image">
                                         </a>
@@ -493,7 +493,7 @@
                                             <div class="d-flex align-items-center justify-content-between">
                                                 <span class="small text-muted">1 неделю назад</span>
                                                 <div class="d-flex align-items-center">
-                                                    <i class="bx bx-show-alt small text-muted mt-2 me-1"></i>
+                                                    <i class="bx bx-show-alt small text-muted mt-1 me-1"></i>
                                                     <span class="small text-muted">943</span>
                                                 </div>
                                             </div>
@@ -649,7 +649,7 @@
     <div class="alert dark-mode alert-black fade show text-center position-fixed start-0 bottom-0 z-index-1030 w-100"
         role="alert">
         <p class="mb-0">🍪 Этот веб-сайт использует cookie. <a href="policy.html" target="_blank">Подробнее</a> <button
-                type="button" class="btn btn-secondary btn-sm align-baseline ms-2 mt-2 mt-sm-0" data-bs-dismiss="alert"
+                type="button" class="btn btn-secondary btn-sm align-baseline ms-2 mt-2 mt-md-0" data-bs-dismiss="alert"
                 aria-label="Close"><span aria-hidden="true">Ок</span></button>
         </p>
     </div>
