--- a/shop-item.html
+++ b/shop-item.html
@@ -79,12 +79,14 @@
             </div>
         </section>
 
-        <section class="section py-5 dark-mode bg-color-black color-white">
+        <section class="section py-5">
             <div class="container">
-                <div class="row gy-4">
+                <div class="row gy-4 justify-content-between">
                     <div class="col-lg-4">
-                        <div class="sticky-top pt-lg-5">
-                            <h1 class="fw-bold mb-5">Дрова-шоп</h1>
+                        <div class="sticky-top">
+                            <div class="mb-5">
+                                <h1 class="h2 fw-bold">Дрова-шоп</h1>
+                            </div>
                             <div class="d-flex justify-content-between py-3">
                                 <p class="fz-15">№123456</p>
                                 <p class="fz-15">6900 руб.</p>
@@ -99,12 +101,12 @@
                                     <a class="btn btn-primary btn-lg w-100" href="#mainForm" data-bs-toggle="modal" data-bs-target="#mainForm">Купить</a>
                                 </div>
                                 <div class="col-md-6">
-                                    <a class="btn btn-secondary btn-lg w-100" href="#">Демо</a>
+                                    <a class="btn btn-outline btn-lg w-100" href="#">Демо</a>
                                 </div>
                             </div>
                         </div>
                     </div>
-                    <div class="col-lg-8">
+                    <div class="col-lg-7">
                         <img class="w-100" src="img/case-about.png" alt="">
                     </div>
                 </div>
@@ -244,7 +246,7 @@
     <div class="alert dark-mode alert-black fade show text-center position-fixed start-0 bottom-0 z-index-1030 w-100"
         role="alert">
         <p class="mb-0">🍪 Этот веб-сайт использует cookie. <a href="policy.html" target="_blank">Подробнее</a> <button type="button"
-                class="btn btn-secondary btn-sm align-baseline ms-2 mt-2 mt-sm-0" data-bs-dismiss="alert" aria-label="Close"><span
+                class="btn btn-secondary btn-sm align-baseline ms-2 mt-2 mt-md-0" data-bs-dismiss="alert" aria-label="Close"><span
                     aria-hidden="true">Ок</span></button>
         </p>
     </div>
